Aggiornamento dati e UI sito + funzione di news

--- a/old-index.html
+++ b/old-index.html
@@ -2,6 +2,9 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="./icona-default.png" type="image/png" />
+  <link rel="icon" href="./icona-default.png" type="image/png" media="(prefers-color-scheme: light)" />
+  <link rel="icon" href="./icona-dark.png" type="image/png" media="(prefers-color-scheme: dark)" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Treninfo Server</title>
 </head>
